add make dir pages

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Copy output to pages directory
         run: >-
+          mkdir ./pages &&
           cp -r ./out ./pages/out &&
           cp ./index.html ./pages/index.html
 
