--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Основной графический движок
 bevy = "0.12"
+
+# egui - библиотека графического интерфейса для Rust, a bevy_egui - библиотека для работы с интефесами egui внутри bevy
+bevy_egui = "0.24"
