--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
-[package]
-name = "build_the_gate"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# https://bevyengine.org/learn/book/getting-started/setup/#cargo-workspaces
+resolver = "2"
 
-[dependencies]
+members = [
+    "client",
+]
+
+
+[workspace.dependencies]
 # Основной графический движок
 bevy = "0.12"
 
