--- a/feature/debug_info/Cargo.toml
+++ b/feature/debug_info/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "build_the_gate"
+name = "debug_info"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
 bevy_egui = { workspace = true }
-
-debug_info = { path = "../feature/debug_info" }
