--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 bevy = { workspace = true }
 bevy_egui = { workspace = true }
+bevy_renet = { workspace = true }
 
 debug_info = { path = "../feature/debug_info" }
